--- a/marketing/templates/marketing/login.html
+++ b/marketing/templates/marketing/login.html
@@ -1,28 +1,20 @@
-<!-- NEED TO UPDATE WITH BASE.HTML -->
+{% extends "base.html" %}
 {% load crispy_forms_tags %}
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Login</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    >
-</head>
-<body class="container mt-5">
 
-    <h1>Tenant Login</h1>
+{% block title %}Tenant Login{% endblock %}
 
-    {% if messages %}
-        {% for message in messages %}
-            <div class="alert alert-danger">{{ message }}</div>
-        {% endfor %}
-    {% endif %}
+{% block content %}
+<h1>Tenant Login</h1>
 
-    <form method="post">
-        {% csrf_token %}
-        {{ form|crispy }}
-    </form>
+{% if messages %}
+  {% for message in messages %}
+    <div class="alert alert-danger">{{ message }}</div>
+  {% endfor %}
+{% endif %}
 
-</body>
-</html>
+<form method="post">
+  {% csrf_token %}
+  {{ form|crispy }}
+  <button type="submit" class="btn btn-primary">Log in</button>
+</form>
+{% endblock %}
