--- a/marketing/templates/marketing/login.html
+++ b/marketing/templates/marketing/login.html
@@ -4,17 +4,13 @@
 {% block title %}Tenant Login{% endblock %}
 
 {% block content %}
-<h1>Tenant Login</h1>
-
-{% if messages %}
-  {% for message in messages %}
-    <div class="alert alert-danger">{{ message }}</div>
-  {% endfor %}
-{% endif %}
+<h1>Login</h1>
 
 <form method="post">
   {% csrf_token %}
   {{ form|crispy }}
-  <button type="submit" class="btn btn-primary">Log in</button>
+  <button class="btn btn-primary">Log in</button>
 </form>
+
+
 {% endblock %}
