--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
   <div class="container">
     <a class="navbar-brand fw-bold" href="/">Pillar & Post</a>
     <div class="ms-auto">
-      <a href="{% url 'marketing:tenant_signup' %}" class="btn btn-primary">Start Free Trial</a>
+      <a href="{% url 'marketing:template_select' %}" class="btn btn-primary">Start Free Trial</a>
     </div>
   </div>
 </nav>
