get login working to link to dashboard create

--- a/marketing/templates/marketing/dashboard_setup.html
+++ b/marketing/templates/marketing/dashboard_setup.html
@@ -25,7 +25,7 @@
             </section>
 
             <footer class="setup-footer">
-                <a href="{% url 'marketing:tenant_dashboard' %}" class="btn btn-primary">
+                <a href="{% url 'cms:dashboard' %}" class="btn btn-primary">
                     Go to Main Dashboard
                 </a>
             </footer>
